@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_series_ordinal);
-use Test::More 'tests' => 13;
+use Test::More 'tests' => 14;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -65,3 +65,8 @@ is($ret, 2, "Series ordinal '$input_series_ordinal' after cleanup.");
 $input_series_ordinal = decode_utf8('sv. č. 40');
 $ret = clean_series_ordinal($input_series_ordinal);
 is($ret, 40, encode_utf8("Series ordinal '$input_series_ordinal' after cleanup."));
+
+# Test.
+$input_series_ordinal = decode_utf8('Výst. 80');
+$ret = clean_series_ordinal($input_series_ordinal);
+is($ret, 80, encode_utf8("Series ordinal '$input_series_ordinal' after cleanup."));
